--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
             overflow-x: hidden;
         }
 
+        /* مەرجی پارەدان - زۆر دیار */
+        .order-notice {
+            background: linear-gradient(90deg, #e84393, #6a1b9a);
+            color: white;
+            text-align: center;
+            padding: 12px;
+            font-weight: 800;
+            font-size: 15px;
+            position: sticky;
+            top: 0;
+            z-index: 1001;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+        }
+
         /* Loading Animation */
         .loader {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
@@ -31,9 +45,9 @@
             z-index: 9999; transition: 0.5s;
         }
 
-        /* Hero Section - زۆر لوکس */
+        /* Hero Section */
         .hero {
-            height: 90vh;
+            height: 85vh;
             background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), 
                         url('https://images.unsplash.com/photo-1526047932273-341f2a7631f9?auto=format&fit=crop&w=1600&q=80');
             background-size: cover; background-position: center; background-attachment: fixed;
@@ -42,61 +56,55 @@
         }
 
         .hero h1 { 
-            font-size: clamp(40px, 8vw, 80px); margin: 0; 
+            font-size: clamp(45px, 10vw, 90px); margin: 0; 
             font-weight: 800; letter-spacing: -2px;
             animation: fadeInUp 1s;
         }
 
-        .hero p { font-size: 20px; opacity: 0.9; animation: fadeInUp 1.5s; }
-
         /* Floating WhatsApp */
         .float-wa {
             position: fixed; bottom: 30px; left: 30px; 
-            background: #25d366; color: white; width: 60px; height: 60px;
+            background: #25d366; color: white; width: 65px; height: 65px;
             border-radius: 50%; display: flex; justify-content: center; align-items: center;
-            box-shadow: 0 10px 20px rgba(0,0,0,0.2); z-index: 1000;
-            text-decoration: none; font-size: 30px; animation: pulse 2s infinite;
+            box-shadow: 0 10px 25px rgba(37, 211, 102, 0.4); z-index: 1000;
+            text-decoration: none; font-size: 35px; animation: pulse 2s infinite;
         }
 
-        /* Product Cards - وەک سایتە گرانبەهاکان */
+        /* Product Grid */
         .section-title { text-align: center; margin: 80px 0 40px; }
-        .section-title h2 { font-size: 35px; color: var(--primary); position: relative; display: inline-block; }
-        .section-title h2::after { content: ''; width: 50px; height: 3px; background: var(--rose); position: absolute; bottom: -10px; right: 0; }
-
         .grid {
             max-width: 1200px; margin: 0 auto; padding: 20px;
             display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 40px;
         }
 
         .card {
-            background: white; border-radius: 0; overflow: hidden;
-            transition: 0.5s; border: 1px solid #eee; position: relative;
+            background: white; border-radius: 5px; overflow: hidden;
+            transition: 0.5s; border: 1px solid #f0f0f0; position: relative;
         }
 
-        .card:hover { transform: translateY(-10px); box-shadow: 0 20px 40px rgba(0,0,0,0.1); }
+        .card:hover { transform: translateY(-15px); box-shadow: 0 30px 60px rgba(0,0,0,0.12); }
+        .card img { width: 100%; height: 420px; object-fit: cover; transition: 0.8s; }
+        .card:hover img { transform: scale(1.08); }
 
-        .card img { width: 100%; height: 400px; object-fit: cover; transition: 0.8s; }
-        .card:hover img { transform: scale(1.1); }
-
-        .card-info { padding: 25px; text-align: center; background: white; }
-        .card-info h3 { font-size: 22px; margin: 0 0 10px; }
-        .price { color: var(--rose); font-weight: 800; font-size: 20px; display: block; margin-bottom: 20px; }
+        .card-info { padding: 30px; text-align: center; }
+        .price { color: var(--rose); font-weight: 800; font-size: 24px; display: block; margin-bottom: 25px; }
 
         .buy-btn {
             background: var(--primary); color: white; text-decoration: none;
-            padding: 12px 30px; display: inline-block; font-weight: 600;
-            border: 1px solid var(--primary); transition: 0.3s;
+            padding: 15px 40px; display: inline-block; font-weight: 600;
+            border-radius: 0; transition: 0.3s; width: 100%;
         }
 
-        .buy-btn:hover { background: transparent; color: var(--primary); }
+        .buy-btn:hover { background: var(--rose); }
 
-        /* Payment Section */
-        .payment-box {
-            background: #fdf2f8; padding: 60px 20px; text-align: center; margin-top: 100px;
+        /* Payment Footer */
+        .payment-footer {
+            background: #fdf2f8; padding: 80px 20px; text-align: center; margin-top: 100px;
         }
-
-        .methods { display: flex; justify-content: center; gap: 20px; margin-top: 30px; }
-        .method-item { background: white; padding: 15px 30px; border-radius: 10px; font-weight: 800; box-shadow: 0 5px 15px rgba(0,0,0,0.05); }
+        .method-tag {
+            background: white; padding: 15px 35px; border-radius: 50px; 
+            display: inline-block; margin: 10px; font-weight: 800; border: 2px solid #eee;
+        }
 
         @keyframes pulse { 0% { transform: scale(1); } 50% { transform: scale(1.1); } 100% { transform: scale(1); } }
     </style>
@@ -107,54 +115,57 @@
     <h2 class="animate__animated animate__heartBeat animate__infinite" style="color: #e84393;">ئیلیان...</h2>
 </div>
 
+<div class="order-notice">
+    ✨ ئاگاداری: بۆ جێگیرکردنی داواکاری، پێویستە ٥٠٪ی بڕی پارەکە بە (FIB یان FastPay) پێشوەختە بنێردرێت.
+</div>
+
 <a href="https://wa.me/9647519568548" class="float-wa">💬</a>
 
 <div class="hero">
     <h1 class="animate__animated animate__fadeInDown">گوڵفرۆشی ئیلیان</h1>
-    <p class="animate__animated animate__fadeInUp">دیارییەک بۆ ئەوانەی شایەنی باشترینن</p>
-    <a href="#products" style="color: white; margin-top: 30px; text-decoration: none; border-bottom: 2px solid white;">ببینە</a>
+    <p class="animate__animated animate__fadeInUp">جوانی و لوکسی لە هەر چەپکە گوڵێکدا</p>
 </div>
 
-<div class="section-title" id="products">
-    <h2>کۆلێکشنی نوێ</h2>
+<div class="section-title">
+    <h2 style="font-size: 35px;">کۆلێکشنی ئێستا</h2>
 </div>
 
 <div class="grid" id="flower-grid"></div>
 
-<div class="payment-box">
-    <h2>شێوازەکانی پارەدان</h2>
-    <p>بۆ دڵنیایی لە جێگیرکردنی داواکاری، نیوەی بڕەکە پێشوەختە وەردەگیرێت</p>
-    <div class="methods">
-        <div class="method-item" style="color: #6a1b9a;">FIB</div>
-        <div class="method-item" style="color: #d81b60;">FastPay</div>
-    </div>
+<div class="payment-footer">
+    <h2 style="color: #6a1b9a;">💳 شێوازەکانی پارەدان</h2>
+    <p style="max-width: 600px; margin: 0 auto 30px; font-size: 18px; color: #555;">
+        تکایە دوای داواکردن، نیوەی بڕەکە بنێرە بۆ جێگیرکردنی کات و جۆری گوڵەکە.
+    </p>
+    <div class="method-tag" style="color: #6a1b9a;">FIB</div>
+    <div class="method-tag" style="color: #d81b60;">Fast Pay</div>
+    <div class="method-tag" style="color: #2d3436; border-color: #d4af37;">Cash (نیوەکەی تر لەکاتی وەرگرتن)</div>
 </div>
 
-<footer style="padding: 40px; text-align: center; font-size: 12px; color: #999;">
-    ELIAN FLOWERS &copy; 2026 - هەمیشە جیاواز
+<footer style="padding: 50px; text-align: center; background: white; border-top: 1px solid #eee; font-size: 13px; color: #bbb;">
+    ELIAN FLOWERS &copy; 2026 - هەمیشە لوکس دەرکەوە
 </footer>
 
 <script>
-    // لۆدینگەکە لادەبات دوای تەواوبوونی سایتەکە
     window.onload = () => { document.getElementById('loader').style.opacity = '0'; setTimeout(() => { document.getElementById('loader').style.display = 'none'; }, 500); };
 
     const flowers = [
-        { name: "ئیلیان سیگنێچەر", price: "٤٥,٠٠٠ د.ع", img: "https://images.unsplash.com/photo-1561181286-d3fee7d55364?w=800" },
+        { name: "ئیلیان سیگنێچەر (Luxury)", price: "٤٥,٠٠٠ د.ع", img: "https://images.unsplash.com/photo-1561181286-d3fee7d55364?w=800" },
         { name: "باکسی ڕێد ڕۆز", price: "٣٠,٠٠٠ د.ع", img: "https://images.unsplash.com/photo-1548610762-65ca0615f399?w=800" },
         { name: "چەپکە گوڵی میترا", price: "٢٥,٠٠٠ د.ع", img: "https://images.unsplash.com/photo-1526047932273-341f2a7631f9?w=800" },
-        { name: "گوڵی مۆری لوکس", price: "٥٥,٠٠٠ د.ع", img: "https://images.unsplash.com/photo-1582794543139-8ac9cb0f7b11?w=800" }
+        { name: "گوڵی مۆری شاهانە", price: "٥٥,٠٠٠ د.ع", img: "https://images.unsplash.com/photo-1582794543139-8ac9cb0f7b11?w=800" }
     ];
 
     const grid = document.getElementById('flower-grid');
     flowers.forEach(f => {
-        const msg = encodeURIComponent(`سڵاو ئیلیان فڵاوەرز، حەز دەکەم ئەمە داوا بکەم: ${f.name}`);
+        const msg = encodeURIComponent(`سڵاو ئیلیان فڵاوەرز، حەز دەکەم ئەمە داوا بکەم: ${f.name}\nئاگادارم کە دەبێت ٥٠٪ی پارەکە بە پێشوەختە بنێرم.`);
         grid.innerHTML += `
             <div class="card">
                 <img src="${f.img}" alt="${f.name}">
                 <div class="card-info">
                     <h3>${f.name}</h3>
                     <span class="price">${f.price}</span>
-                    <a href="https://wa.me/9647519568548?text=${msg}" class="buy-btn">داواکردن</a>
+                    <a href="https://wa.me/9647519568548?text=${msg}" class="buy-btn">داواکردن لە واتسئەپ</a>
                 </div>
             </div>
         `;
