--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         .buy-btn:hover { background: transparent; color: var(--primary); }
 
-        /* بەشی زانیارییەکان بە دیزاینی سێ ستوونی و شیک */
+        /* Footer Info Section */
         .footer-info-section {
             background: #fff;
             padding: 60px 20px;
@@ -116,6 +116,13 @@
             color: var(--rose);
             font-size: 18px;
             margin-bottom: 15px;
+            font-weight: 800;
+        }
+
+        .info-col h5 {
+            font-size: 14px;
+            color: var(--primary);
+            margin: 15px 0 5px 0;
             font-weight: 800;
         }
 
@@ -190,9 +197,11 @@
 
         <div class="info-col">
             <h4>پرسیارە باوەکان</h4>
-            <p><strong>گەیاندن چەند کات دەخایەنێت؟</strong></p>
+            
+            <h5>گەیاندن چەند کات دەخایەنێت؟</h5>
             <p>بەپێی شوێنەکەت، گەیاندن لە نێوان ١ بۆ ٣ کاتژمێر دەخایەنێت.</p>
-            <p><strong>چۆن پارە بنێرین؟</strong></p>
+            
+            <h5>چۆن پارە بنێرین؟</h5>
             <p>دەتوانیت لە ڕێگەی FIB یان FastPay نیوەی بڕەکە وەک پێشەکی بنێریت.</p>
         </div>
     </div>
