--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                     </div>
 
                     <div class="flex flex-col sm:flex-row gap-4 pt-4">
-                        <a href="tel:07500000000" class="flex-1 bg-blue-600 hover:bg-blue-700 text-white text-center py-5 rounded-2xl font-bold text-xl transition-all shadow-lg active:scale-95">
+                        <a href="tel:07519568548" class="flex-1 bg-blue-600 hover:bg-blue-700 text-white text-center py-5 rounded-2xl font-bold text-xl transition-all shadow-lg active:scale-95">
                             <i class="fas fa-phone-alt ml-2"></i> پەیوەندی بکە
                         </a>
-                        <a href="https://wa.me/9647500000000" class="flex-1 bg-green-600 hover:bg-green-700 text-white text-center py-5 rounded-2xl font-bold text-xl transition-all shadow-lg active:scale-95">
+                        <a href="https://wa.me/9647519568548" target="_blank" class="flex-1 bg-green-600 hover:bg-green-700 text-white text-center py-5 rounded-2xl font-bold text-xl transition-all shadow-lg active:scale-95">
                             <i class="fab fa-whatsapp ml-2 text-2xl"></i> واتسئاپ
                         </a>
                     </div>
