--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
-
 <!DOCTYPE html>
 <html lang="ku" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ئاسایشی خەلیفان | بەشی سکاڵا</title>
+
+    <meta name="theme-color" content="#0f172a">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="ئاسایشی خەلیفان">
     
     <meta property="og:title" content="ئاسایشی خەلیفان | بەشی سکاڵا">
-    <meta property="og:description" content="بەشی بەرەنگاربوونەوەی تاوانە ئەلیکترۆنییەکان - سکاڵای خراپ بەکارهێنانی ئامێرە ئەلیکترۆنییەکان">
-    <meta property="og:image" content="https://i.ibb.co/68Xk5zM/Screenshot-20250212-014909-TikTok.jpg">
+    <meta property="og:description" content="بەشی بەرەنگاربوونەوەی تاوانە ئەلیکترۆنییەکان">
+    <meta property="og:image" content="Hamaa.jpg">
     <meta property="og:type" content="website">
 
     <script src="https://cdn.tailwindcss.com"></script>
@@ -22,8 +26,8 @@
 <body class="bg-gray-50 text-gray-800">
 
     <header class="hero-gradient text-white py-12 px-4 text-center shadow-lg">
-        <div class="max-w-4xl mx-auto">
-            <img src="https://i.ibb.co/68Xk5zM/Screenshot-20250212-014909-TikTok.jpg" alt="Logo" class="w-32 h-32 mx-auto rounded-full border-4 border-blue-400 mb-4 object-cover shadow-2xl">
+        <div class="max-w-4xl mx-auto text-center">
+            <img src="Hamaa.jpg" alt="Logo" class="w-32 h-32 mx-auto rounded-full border-4 border-blue-400 mb-4 object-cover shadow-2xl">
             
             <h1 class="text-3xl md:text-4xl font-bold mb-2">بەڕێوبەرایەتی ئاسایشی خەلیفان</h1>
             <p class="text-blue-200 text-lg">بەشی بەرەنگاربوونەوەی تاوانە ئەلیکترۆنییەکان</p>
@@ -46,11 +50,11 @@
                     </div>
 
                     <div class="flex flex-col sm:flex-row gap-4 pt-4">
-                        <a href="tel:07519568548" class="flex-1 bg-blue-600 hover:bg-blue-700 text-white text-center py-5 rounded-2xl font-bold text-xl transition-all shadow-lg active:scale-95">
-                            <i class="fas fa-phone-alt ml-2"></i> پەیوەندی بکە
+                        <a href="tel:07519568548" class="flex-1 bg-blue-600 hover:bg-blue-700 text-white text-center py-5 rounded-2xl font-bold text-xl transition-all shadow-lg active:scale-95 flex items-center justify-center">
+                            <i class="fas fa-phone-alt ml-2 text-sm"></i> &nbsp; پەیوەندی بکە
                         </a>
-                        <a href="https://wa.me/9647519568548" target="_blank" class="flex-1 bg-green-600 hover:bg-green-700 text-white text-center py-5 rounded-2xl font-bold text-xl transition-all shadow-lg active:scale-95">
-                            <i class="fab fa-whatsapp ml-2 text-2xl"></i> واتسئاپ
+                        <a href="https://wa.me/9647519568548" target="_blank" class="flex-1 bg-green-600 hover:bg-green-700 text-white text-center py-5 rounded-2xl font-bold text-xl transition-all shadow-lg active:scale-95 flex items-center justify-center">
+                            <i class="fab fa-whatsapp ml-2 text-2xl"></i> &nbsp; واتسئاپ
                         </a>
                     </div>
                 </div>
@@ -60,21 +64,21 @@
             </div>
         </section>
 
-        <div class="grid md:grid-cols-3 gap-6">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
             <div class="bg-white p-6 rounded-xl shadow-md border-t-4 border-blue-600 text-center transition-transform hover:-translate-y-1">
                 <i class="fas fa-user-secret text-3xl text-blue-600 mb-3"></i>
                 <h3 class="font-bold mb-2">نهێنیپارێزی</h3>
-                <p class="text-sm text-gray-600">زانیارییەکانت بە تەواوی پارێزراو دەبن لای ئێمە.</p>
+                <p class="text-sm text-gray-600 italic">زانیارییەکانت بە تەواوی پارێزراو دەبن.</p>
             </div>
             <div class="bg-white p-6 rounded-xl shadow-md border-t-4 border-red-600 text-center transition-transform hover:-translate-y-1">
                 <i class="fas fa-bolt text-3xl text-red-600 mb-3"></i>
                 <h3 class="font-bold mb-2">خێرایی</h3>
-                <p class="text-sm text-gray-600">بە زووترین کات بەدواداچوون بۆ کێشەکەت دەکرێت.</p>
+                <p class="text-sm text-gray-600 italic">بە زووترین کات وەڵامت دەدرێتەوە.</p>
             </div>
             <div class="bg-white p-6 rounded-xl shadow-md border-t-4 border-green-600 text-center transition-transform hover:-translate-y-1">
                 <i class="fas fa-gavel text-3xl text-green-600 mb-3"></i>
                 <h3 class="font-bold mb-2">یاسایی</h3>
-                <p class="text-sm text-gray-600">هەموو ڕێکارەکان بەپێی یاسای سزادانی عێراقی دەبێت.</p>
+                <p class="text-sm text-gray-600 italic">هەموو ڕێکارەکان بەپێی یاسان.</p>
             </div>
         </div>
 
@@ -82,7 +86,7 @@
 
     <footer class="text-center py-12 text-gray-400 text-xs">
         <div class="mb-2">
-            <i class="fas fa-lock ml-1"></i> سەکۆی پاراستنی دیجیتاڵی خەلیفان
+            <i class="fas fa-lock ml-1 text-blue-500"></i> سەکۆی پاراستنی دیجیتاڵی خەلیفان
         </div>
         &copy; ۲۰۲٦ هەموو مافەکان پارێزراوە بۆ ئاسایشی خەلیفان
     </footer>
